...
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="350dp"
        android:layout_height="320dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
...
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewDivider8"
                app:srcCompat="@drawable/ic_baseline_location_on_24" />

            <TextView
                android:id="@+id/buildingName2"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/montserrat"
                android:text="N/A"
...
                android:text="Name"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/montserrat"
                android:text="Mname Is Jeff"
                android:textAlignment="viewEnd"
...
                android:background="#4d000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/idTitle3" />

            <TextView
                android:id="@+id/id5"
                android:layout_width="91dp"
                android:layout_height="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/montserrat"
                android:text="1234567890"
...
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="#4d000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id6" />

            <TextView
                android:id="@+id/id6"
                android:layout_width="220dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
...
